[package]
name = "chelate"
description = "Parser for a bunch of molecular file formats"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/JensKrumsieck/chelate"
license = "MIT OR Apache-2.0"
authors = ["Jens Krumsieck"]
keywords = ["chemistry", "molecule"]
categories = ["science"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["default"]

[features]
default = ["petgraph", "rayon"]
petgraph = ["dep:petgraph"]
rayon = ["dep:rayon"]

[dependencies]
nalgebra = "0.33.2"
petgraph = { version = "0.8.1", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
rstest = "0.25.0"
